--- a/ServerManager/Redesigned GUI/Manager.resx
+++ b/ServerManager/Redesigned GUI/Manager.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="ColumnHeader1.GenerateMember" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>False</value>
+  </metadata>
+  <metadata name="ColumnHeader2.GenerateMember" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>False</value>
+  </metadata>
   <metadata name="StyleManager.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
@@ -147,7 +153,7 @@
   <data name="RadioButton2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wgAADsIBFShKgAAAAwJJREFUWEe1ly+IFVEUxl/YYNiwYcENBsMGEcMGg2HDghs2KGwwbDAoiAoaDAaD
+        wwAADsMBx2+oZAAAAwJJREFUWEe1ly+IFVEUxl/YYNiwYcENBsMGEcMGg2HDghs2KGwwbDAoiAoaDAaD
         YdFgMChrUDCIGA0Gg4qiQVDEoGBQWGSDgoJBBUHFP+PvmzlnvHNnZufPe/vBj7lzz7l3zrvzzZ15g65K
         kmQXPIZYL2G7pY1eTD4NN3Ul0xocg1fpWaa/8AA227DhxWQTcAF+gfQZTsEmS1HObngPrj9wA/KcztJg
         OAm6oKQCLsGkpZRE7CB8BddPOGfh9mLQEqxqBtMtmLZwo8g9Az800PQFjli4XiTNwXONMD2FWQt3EuPG
