--- a/ServerManager/Form1.resx
+++ b/ServerManager/Form1.resx
@@ -117,6 +117,31 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="DxListView1.ColumnHeaders" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAJMBU2VydmVyTWFuYWdlciwgVmVyc2lvbj0xLjcuMC4wLCBDdWx0
+        dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPW51bGxdXSwgbXNjb3JsaWIsIFZlcnNpb249NC4wLjAu
+        MCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5DAMAAABEU2Vy
+        dmVyTWFuYWdlciwgVmVyc2lvbj0xLjcuMC4wLCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2Vu
+        PW51bGwFAQAAAFJTeXN0ZW0uQ29sbGVjdGlvbnMuR2VuZXJpYy5MaXN0YDFbW1NlcnZlck1hbmFnZXIu
+        RFhMaXN0VmlldytEWExpc3RWaWV3Q29sdW1uSGVhZGVyAwAAAAZfaXRlbXMFX3NpemUIX3ZlcnNpb24E
+        AAAxU2VydmVyTWFuYWdlci5EWExpc3RWaWV3K0RYTGlzdFZpZXdDb2x1bW5IZWFkZXJbXQMAAAAICAIA
+        AAAJBAAAAAAAAAAAAAAABwQAAAAAAQAAAAAAAAAEL1NlcnZlck1hbmFnZXIuRFhMaXN0VmlldytEWExp
+        c3RWaWV3Q29sdW1uSGVhZGVyAwAAAAs=
+</value>
+  </data>
+  <data name="DxListView1.Items" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAJMBU2VydmVyTWFuYWdlciwgVmVyc2lvbj0xLjcuMC4wLCBDdWx0
+        dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPW51bGxdXSwgbXNjb3JsaWIsIFZlcnNpb249NC4wLjAu
+        MCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5DAMAAABEU2Vy
+        dmVyTWFuYWdlciwgVmVyc2lvbj0xLjcuMC4wLCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2Vu
+        PW51bGwFAQAAAEpTeXN0ZW0uQ29sbGVjdGlvbnMuR2VuZXJpYy5MaXN0YDFbW1NlcnZlck1hbmFnZXIu
+        RFhMaXN0VmlldytEWExpc3RWaWV3SXRlbQMAAAAGX2l0ZW1zBV9zaXplCF92ZXJzaW9uBAAAKVNlcnZl
+        ck1hbmFnZXIuRFhMaXN0VmlldytEWExpc3RWaWV3SXRlbVtdAwAAAAgIAgAAAAkEAAAAAAAAAAAAAAAH
+        BAAAAAABAAAAAAAAAAQnU2VydmVyTWFuYWdlci5EWExpc3RWaWV3K0RYTGlzdFZpZXdJdGVtAwAAAAs=
+</value>
+  </data>
   <metadata name="Timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
