--- a/ServerManager/My Project/Resources.resx
+++ b/ServerManager/My Project/Resources.resx
@@ -2975,7 +2975,13 @@
         f0AjvhfQMU1A59T6PuHcFecmX9fdvRKEAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="modServerListICO" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\modServerListICO.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="server" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\server.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="serverListICO" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\serverListICO.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
